# rapi

./: LICENSE  Makefile  README.md
doc/: Protocol.md
rapi/: Makefile  rapi.c  rapi.h
rapi-daemon/: Cargo.toml  Makefile
rapi-daemon/src/: lib.rs  req.rs
rapictld/: Cargo.toml  Makefile
rapictld/src/: main.rs
rapid/: Cargo.toml  Makefile
rapid/src/: main.rs
script/: autotest.sh  run.sh
