[package]
name = "rapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rapid"

[[bin]]
name = "rapictld"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.8", features = ["derive"] }
log = "0.4.20"
nix = { version = "0.27.1", features = ["signal"] }
serde = { version = "1.0.189", features = ["derive"] }
simplelog = "0.12.1"
